# zexo-studio

./: .gitignore  LICENSE  README.md  SETUP.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
src-tauri/src/chat/: history.rs  mod.rs  types.rs
src-tauri/src/llm/: engine.rs  models.rs
src/js/: api.js  app.js  chat.js  markdown.js  models.js  settings.js  sidebar.js
src/styles/: main.css
